SUBDIRS = . m4 intl po src

EXTRA_DIST = docs config.rpath mkinstalldirs \
	config.h.in Compilation.flags.in

dist_icon_DATA = amule.xpm
icondir = $(datadir)/pixmaps

dist_util_DATA = amule.desktop
utildir = $(datadir)/applications

dist_doc_DATA = docs/*
docdir = $(datadir)/doc/$(PACKAGE)-$(VERSION)

ACLOCAL_AMFLAGS = -I m4
